--- a/src/views/realTimeProd.handlebars
+++ b/src/views/realTimeProd.handlebars
@@ -1,4 +1,4 @@
 <h1 class = "title">Mis productos</h1>
 <div id="products"></div>
 <script src = "/socket.io/socket.io.js"></script>
-<script src="../public/js/index.js"></script>
+<script src="/js/index.js"></script>
